manifests/spring-auth/spring-auth-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-auth-server
  namespace: headlamp
spec:
  selector:
    app: spring-auth-server
  ports:
  - name: http
    port: 80
    targetPort: 9000
